--- a/TPC/TPC_02/Makefile
+++ b/TPC/TPC_02/Makefile
@@ -1,9 +1,9 @@
-OBJS=  mainTPC02.o TPC02_1a.o TPC02_1b.o TPC02_2.o
+OBJS=  mainTPC02.o TPC02_1a.o TPC02_1b.o TPC02_2.o TPC02_3c.o
 
 CFLAGS= -g -Wall
- 
+
 all: TPC02
- 
+
 TPC02: $(OBJS)
 		gcc -o TPC02 $(OBJS)
 
@@ -15,8 +15,8 @@ TPC02_1b.o: TPC02_1b.c TPC02.h
 
 TPC02_2.o: TPC02_2.c TPC02.h
 
+TPC02_3c.o: TPC02_3c.c TPC02.h
+
 clean:
 	rm -f TPC02 $(OBJS)
 	@echo 'Se han borrado los objetos y ejecutables generados'
-	
-	
