Subo el ejercicio2.4 completo

--- a/TPC/TPC_02/Makefile
+++ b/TPC/TPC_02/Makefile
@@ -1,4 +1,4 @@
-OBJS=  mainTPC02.o TPC02_1a.o TPC02_1b.o TPC02_2.o TPC02_3a.o TPC02_3b.o TPC02_3c.o
+OBJS=  mainTPC02.o TPC02_1a.o TPC02_1b.o TPC02_2.o TPC02_3a.o TPC02_3b.o TPC02_3c.o	TPC02_4a.o TPC02_4b.o TPC02_4c.o
 
 CFLAGS= -g -Wall
 
@@ -20,7 +20,13 @@ TPC02_3a.o: TPC02_3a.c TPC02.h
 TPC02_3b.o: TPC02_3b.c TPC02.h
 
 TPC02_3c.o: TPC02_3c.c TPC02.h
-#este es un comentario
+
+TPC02_4a.o: TPC02_4a.c TPC02.h
+
+TPC02_4b.o: TPC02_4b.c TPC02.h
+
+TPC02_4c.o: TPC02_4c.c TPC02.h
+
 clean:
 	rm -f TPC02 $(OBJS)
 	@echo 'Se han borrado los objetos y ejecutables generados'
