TPC2 punto 5a terminado sin problemas!

--- a/TPC/TPC_02/Makefile
+++ b/TPC/TPC_02/Makefile
@@ -1,4 +1,4 @@
-OBJS=  mainTPC02.o TPC02_1a.o TPC02_1b.o TPC02_2.o TPC02_3a.o TPC02_3b.o TPC02_3c.o	TPC02_4a.o TPC02_4b.o TPC02_4c.o
+OBJS=  mainTPC02.o TPC02_1a.o TPC02_1b.o TPC02_2.o TPC02_3a.o TPC02_3b.o TPC02_3c.o	TPC02_4a.o TPC02_4b.o TPC02_4c.o TPC02_5.o
 
 CFLAGS= -g -Wall
 
@@ -27,6 +27,7 @@ TPC02_4b.o: TPC02_4b.c TPC02.h
 
 TPC02_4c.o: TPC02_4c.c TPC02.h
 
+TPC02_5.o: TPC02_5.c TPC02.h
 
 clean:
 	rm -f TPC02 $(OBJS)
