triangulo por separado terminado

--- a/Practicas_19/Triangulo/Makefile
+++ b/Practicas_19/Triangulo/Makefile
@@ -1,6 +1,6 @@
-OBJS=  main.o
+OBJS=  main.o valores_positivos.o es_triangulo.o es_rectangulo.o tipo_triangulo.o
 
-FLAGS= -g -Wall
+CFLAGS= -g -lm -Wall
 
 all: main
 
@@ -9,9 +9,17 @@ all: main
 main: $(OBJS)
 		gcc -o main $(OBJS)
 
-main.o: main.c
+main.o: main.c header.h
+
+valores_positivos.o: valores_positivos.c header.h
+
+es_triangulo.o:	es_triangulo.c header.h
+
+es_rectangulo.o: es_rectangulo.c header.h
+
+tipo_triangulo.o: tipo_triangulo.c header.h
 
 clean:
-	rm -f $(OBJS) main
+	rm -f main $(OBJS)
 
 	@echo 'Se han borrado los archivos .o'
